setup home - contact - signup and login

--- a/assets/css/blogpage.css
+++ b/assets/css/blogpage.css
@@ -271,7 +271,7 @@
 .widget-featured .widget-img .text span {
   font-size: 20px;
   font-weight: 700;
-  color: #4caf50;
+  color: #fcc623;
 }
 .widget-search input[type="search"] {
   position: relative;
