--- a/assets/css/color-switcher.css
+++ b/assets/css/color-switcher.css
@@ -90,7 +90,7 @@ ul.colors li a.color1.active:after, ul.colors li a.color8.active:after{
 
 /* light-version */
 ul.colors .color1 {
-    background: #4CAF50;  /* green */    
+    background: #fcc623;  /* green */    
 }
 ul.colors .color2 {
     background: #01b1d7;  /* blue */
