--- a/assets/css/colors/green.css
+++ b/assets/css/colors/green.css
@@ -1,166 +1,166 @@
 a:hover{
-  color: #4CAF50;
+  color: #fcc623;
 }
 .btn-common {
-  background: #4CAF50;
+  background: #fcc623;
 }
 /* Back to Top */
 .back-to-top i {
-  background-color: #4CAF50;
+  background-color: #fcc623;
 }
 #color-style-switcher .bottom a i{
-  color: #4CAF50;
+  color: #fcc623;
 }
 /* Navbar */
 .slicknav_btn{
-  border-color: #4CAF50;
+  border-color: #fcc623;
   border-radius: 2px;
 }
 .slicknav_menu .slicknav_btn .slicknav_icon-bar{
-  background: #4CAF50;
+  background: #fcc623;
 }
 .slicknav_menu .slicknav_btn:hover{
-  background: #4CAF50;
+  background: #fcc623;
 }
 .slicknav_nav .active a{
-  background: #4CAF50;
+  background: #fcc623;
 }
 .slicknav_nav a:hover, .slicknav_nav .active{
-  color: #4CAF50;
+  color: #fcc623;
 }
 .slicknav_nav .dropdown li a.active{
-  background: #4CAF50;
+  background: #fcc623;
 }
 .account-setting a:hover{
-  color: #4CAF50;
+  color: #fcc623;
 }
 /* Navbar */
 .navbar-default .navbar-nav > li:hover > a, .navbar-default .navbar-nav > li > a.active{
-  background: #4CAF50;
+  background: #fcc623;
 }
 .navbar-default .navbar-nav .dropdown{
-  border-color: #4CAF50;
+  border-color: #fcc623;
 }
 .dropdown > li:hover > a,
 .dropdown li a.active{
-  background-color: #4CAF50;
+  background-color: #fcc623;
 }
 /* Slider */
 #carousel-area .item .carousel-caption .price-sl{
-  color: #4CAF50;
+  color: #fcc623;
 }
 .dropdown-menu li a:hover, .dropdown-menu li a:focus, .dropdown-menu li a:active{
-  background: #4CAF50;
+  background: #fcc623;
 }
 /* Latest sales */
 .label-featured{
-  background: #4CAF50;
+  background: #fcc623;
 }
 .actions li .add-fav{
-  background: #4CAF50;
+  background: #fcc623;
 }
 .item-body .property-title a:hover{
-  color: #4CAF50;
+  color: #fcc623;
 }
 .item-foot a:hover{
-  color: #4CAF50;
+  color: #fcc623;
 }
 /* Feature Highlighta */
 .features-box .features-icon i{
-  color: #4CAF50;
+  color: #fcc623;
 }
 .owl-theme .owl-buttons div{
-  background: #4CAF50!important;
+  background: #fcc623!important;
 }
 /* Gallery */
 .controls a:hover, .controls .active{
-  background: #4CAF50;
+  background: #fcc623;
 }
 .controls a{
-  border-color: #4CAF50;
+  border-color: #fcc623;
 }
 .portfolio-item .icon i:hover{
-  color: #4CAF50;
-  border-color: #4CAF50;
+  color: #fcc623;
+  border-color: #fcc623;
 }
 /* Awesome Features */
 .features .features-box .features-content h4 i{
-  color: #4CAF50;
+  color: #fcc623;
 }
 .features .thum-ft{
   box-shadow: 8px 8px 0px rgba(76,175,80,0.7);
-  border-color: #4CAF50;
+  border-color: #fcc623;
 }
 /* Counter */
 .counting .icon i{
-  color: #4CAF50;
+  color: #fcc623;
 }
 /* Blog */
 #blog .blog-item-img .blog-item-info{
-  background: #4CAF50;
+  background: #fcc623;
 }
 /* Footer */
 .footer-nav ul li a:hover{
-  color: #4CAF50;
+  color: #fcc623;
 }
 .footer-nav ul li a i{
-  color: #4CAF50;
+  color: #fcc623;
 }
 
 /* Grid active */
 .product-filter .grid-list-count .active{
-  color: #4CAF50;
+  color: #fcc623;
 }
 /* Pagination */
 .pagination .active > a, .pagination .active > a:focus, .pagination > .active > a:hover, .pagination > .active > span, .pagination > .active > span:focus, .pagination > .active > span:hover{
-  background: #4CAF50!important;
+  background: #fcc623!important;
 }
 .pagination > li > a:focus, .pagination > li > a:hover, .pagination > li > span:focus, .pagination > li > span:hover{
-  background: #4CAF50!important;
-  border-color: #4CAF50!important;
+  background: #fcc623!important;
+  border-color: #fcc623!important;
 }
 /* Property Page */
 .property-head .price-detail{
-  color: #4CAF50;
+  color: #fcc623;
 }
 .property-head .web-refernce strong{
-  color: #4CAF50;
+  color: #fcc623;
 }
 .widget-title{
-  border-bottom-color: #4CAF50;
+  border-bottom-color: #fcc623;
 }
 .widget-title::before{
-  border-bottom-color: #4CAF50;
+  border-bottom-color: #fcc623;
 }
 #sidebar .tag a:hover{
-  color: #4CAF50;
+  color: #fcc623;
 }
 .widget-area-sidebar .posts-list .widget-content a:hover{
-  color: #4CAF50;
+  color: #fcc623;
 }
 .widget-featured .widget-img .text span{
-  color: #4CAF50;
+  color: #fcc623;
 }
 .owl-theme .owl-controls .owl-page.active span, .owl-theme .owl-controls.clickable .owl-page:hover span{
-  background: #4CAF50;
+  background: #fcc623;
 }
 .nav-tabs > li > a{
-  border-color: #4CAF50; 
+  border-color: #fcc623; 
 }
 .nav-tabs > li.active > a, .nav-tabs > li.active > a:focus, .nav-tabs > li > a:hover, .nav-tabs > li.active > a:hover{
-  background: #4CAF50;
-  border-color: #4CAF50; 
+  background: #fcc623;
+  border-color: #fcc623; 
 }
 /* Contact Page */
 .support-inner .support-info .info-title i{
-  color: #4CAF50;
+  color: #fcc623;
 }
 .form-control:focus, textarea:focus{
-  border-color: #4CAF50; 
+  border-color: #fcc623; 
 }
 .price .item-price{
-  color: #4CAF50; 
+  color: #fcc623; 
 }
 .panel-default .panel-heading a{
-  background-color: #4CAF50;  
+  background-color: #fcc623;  
 }
