--- a/assets/css/contacts.css
+++ b/assets/css/contacts.css
@@ -53,7 +53,7 @@
 .form-control:focus,
 textarea:focus {
   box-shadow: none;
-  border: 1px solid #4caf50;
+  border: 1px solid #fcc623;
   outline: none;
 }
 .has-error .form-control:focus {
@@ -97,7 +97,7 @@ textarea:focus {
   color: #999;
 }
 .page-login-form .form-links li a:hover {
-  color: #4caf50;
+  color: #fcc623;
 }
 .login-form input[type="checkbox"],
 .login-form input[type="radio"] {
@@ -126,7 +126,7 @@ textarea:focus {
   font-weight: 700;
 }
 .support-inner .support-info .info-title i {
-  color: #4caf50;
+  color: #fcc623;
   font-size: 30px;
   left: 25px;
   position: absolute;
