--- a/assets/css/custom-components.css
+++ b/assets/css/custom-components.css
@@ -104,7 +104,7 @@
 .dropdown-menu li a:hover,
 .dropdown-menu li a:focus,
 .dropdown-menu li a:active {
-  background-color: #4caf50;
+  background-color: #fcc623;
   color: #fff;
   border-radius: 0;
 }
@@ -213,7 +213,7 @@ select > opation:focus {
   top: 12px;
   left: 12px;
   z-index: 3;
-  background: #4caf50;
+  background: #fcc623;
   border-radius: 2px;
   padding: 2px 12px 2px;
 }
@@ -280,7 +280,7 @@ select > opation:focus {
 .actions li .add-fav {
   color: #fff;
   font-size: 18px;
-  background: #4caf50;
+  background: #fcc623;
   width: 32px;
   line-height: 28px;
   height: 32px;
@@ -319,7 +319,7 @@ select > opation:focus {
   text-transform: uppercase;
 }
 .item-body .property-title a:hover {
-  color: #4caf50;
+  color: #fcc623;
 }
 .item-body .adderess {
   color: #999;
@@ -347,7 +347,7 @@ select > opation:focus {
   color: #999;
 }
 .item-foot a:hover {
-  color: #4caf50;
+  color: #fcc623;
 }
 .item-foot p {
   color: #999;
@@ -434,7 +434,7 @@ select > opation:focus {
   padding: 2px;
 }
 .features-box .features-icon i {
-  color: #4caf50;
+  color: #fcc623;
   font-size: 30px;
 }
 .features-box .features-content {
@@ -467,7 +467,7 @@ select > opation:focus {
   margin: 0px 5px;
   color: #666;
   text-transform: uppercase;
-  border: 1px solid #4caf50;
+  border: 1px solid #fcc623;
   padding: 10px 15px;
   -webkit-transition: all 0.9s ease;
   -moz-transition: all 0.9s ease;
@@ -477,7 +477,7 @@ select > opation:focus {
 }
 .controls a:hover,
 .controls .active {
-  background: #4caf50;
+  background: #fcc623;
   color: #fff;
 }
 #portfolio-list .mix {
@@ -556,8 +556,8 @@ select > opation:focus {
   transition: all 0.4s ease;
 }
 .portfolio-item .icon i:hover {
-  color: #4caf50;
-  border-color: #4caf50;
+  color: #fcc623;
+  border-color: #fcc623;
 }
 .portfolio-item .icon .left {
   -webkit-transform: translateY(25px);
@@ -640,14 +640,14 @@ select > opation:focus {
 }
 .features .features-box .features-content h4 i {
   margin-right: 10px;
-  color: #4caf50;
+  color: #fcc623;
   font-size: 26px;
   vertical-align: middle;
 }
 .features .thum-ft {
   margin-top: 54px;
   box-shadow: 8px 8px 0px rgba(52, 152, 219, 0.7);
-  border: 6px solid #4caf50;
+  border: 6px solid #fcc623;
 }
 /* ==========================================================================
    Featured Listings Styles
@@ -679,7 +679,7 @@ select > opation:focus {
   width: 40px;
   height: 40px;
   display: block !important;
-  background: #4caf50 !important;
+  background: #fcc623 !important;
   text-align: center;
   display: inline-block;
   opacity: 1!important;
@@ -803,7 +803,7 @@ select > opation:focus {
   margin-right: 5px;
 }
 .agent-member .info .profile-link:hover {
-  color: #4caf50;
+  color: #fcc623;
 }
 .agent-member:hover .agent-thumbnail {
   background: #f1f1f1;
@@ -900,7 +900,7 @@ select > opation:focus {
   position: absolute;
   bottom: 0;
   left: 0;
-  background: #4caf50;
+  background: #fcc623;
   width: 100%;
   padding: 10px 15px;
 }
@@ -947,7 +947,7 @@ select > opation:focus {
   color: #888;
 }
 .localtion-list .cat-list li a:hover {
-  color: #4caf50;
+  color: #fcc623;
   margin-left: 5px;
 }
 /* ==========================================================================
@@ -967,7 +967,7 @@ select > opation:focus {
 .counting .icon i {
   font-size: 42px;
   margin-right: 20px;
-  color: #4caf50;
+  color: #fcc623;
 }
 .counting .desc h3 {
   font-size: 42px;
@@ -981,7 +981,7 @@ select > opation:focus {
   letter-spacing: 1px;
 }
 .counting:hover span {
-  background: #4caf50;
+  background: #fcc623;
   -webkit-transform: scale(1.1, 1.1);
   -moz-transform: scale(1.1, 1.1);
   -ms-transform: scale(1.1, 1.1);
@@ -1034,11 +1034,11 @@ footer a {
   -o-transition: all 0.2s ease-in-out;
 }
 .footer-nav ul li a:hover {
-  color: #4caf50;
+  color: #fcc623;
 }
 .footer-nav ul li a i {
   margin-right: 5px;
-  color: #4caf50;
+  color: #fcc623;
   font-size: 14px;
 }
 .address li {
@@ -1092,7 +1092,7 @@ footer a {
   color: #fff;
 }
 #copyright p a:hover {
-  color: #4caf50;
+  color: #fcc623;
 }
 .bottom-social-icons a {
   color: #fff;
@@ -1139,7 +1139,7 @@ footer a {
 .widget-title:before {
   content: "";
   position: absolute;
-  border-bottom: 3px solid #4caf50;
+  border-bottom: 3px solid #fcc623;
   width: 50px;
   bottom: -1px;
   left: 0px;
@@ -1148,7 +1148,7 @@ footer a {
   display: inline-block;
   margin-right: 15px;
   font-size: 16px;
-  color: #4caf50;
+  color: #fcc623;
 }
 .widget-title h4 {
   font-size: 16px;
@@ -1170,7 +1170,7 @@ footer a {
   border-bottom: 1px solid #eee;
 }
 .categories-list ul li a:hover {
-  color: #4caf50;
+  color: #fcc623;
 }
 .categories-list ul li a i {
   margin-right: 5px;
@@ -1202,7 +1202,7 @@ footer a {
   border-radius: 4px;
 }
 .product-filter .grid-list-count .active {
-  color: #4caf50;
+  color: #fcc623;
 }
 .product-filter .title-listing {
   margin: 0px;
@@ -1258,11 +1258,11 @@ footer a {
 .property-head .price-detail {
   font-size: 30px;
   line-height: 50px;
-  color: #4caf50;
+  color: #fcc623;
 }
 .property-head .web-refernce strong {
   font-size: 22px;
-  color: #4caf50;
+  color: #fcc623;
 }
 .property-head .icon {
   text-align: center;
@@ -1364,7 +1364,7 @@ footer a {
   color: #999;
 }
 .adds-wrapper .add-type {
-  color: #4caf50;
+  color: #fcc623;
   background: #eee;
   border: 1px solid #ddd;
   display: inline-block;
@@ -1437,7 +1437,7 @@ footer a {
 .nav-tabs > li > a {
   color: #2d2d2d;
   margin-right: 5px;
-  border: 1px solid #4caf50;
+  border: 1px solid #fcc623;
   padding: 10px 20px;
   border-radius: 2px;
 }
@@ -1445,9 +1445,9 @@ footer a {
 .nav-tabs > li.active > a:focus,
 .nav-tabs > li > a:hover,
 .nav-tabs > li.active > a:hover {
-  background: #4caf50;
+  background: #fcc623;
   border-radius: 2px;
-  border: 1px solid #4caf50;
+  border: 1px solid #fcc623;
   outline: none;
   color: #fff;
 }
@@ -1506,7 +1506,7 @@ footer a {
 .pagination > .active > span,
 .pagination > .active > span:focus,
 .pagination > .active > span:hover {
-  background-color: #4caf50 !important;
+  background-color: #fcc623 !important;
   border: none;
 }
 .pagination > li:first-child > a,
@@ -1521,8 +1521,8 @@ footer a {
 .pagination > li > a:hover,
 .pagination > li > span:focus,
 .pagination > li > span:hover {
-  background: #4caf50;
-  border-color: #4caf50;
+  background: #fcc623;
+  border-color: #fcc623;
   color: #fff;
 }
 /* ==========================================================================
@@ -1674,7 +1674,7 @@ footer a {
   font-size: 15px;
   border-radius: 2px;
   text-align: center;
-  background-color: #4caf50;
+  background-color: #fcc623;
   -webkit-transition: all 0.2s linear;
   -moz-transition: all 0.2s linear;
   -o-transition: all 0.2s linear;
@@ -1743,7 +1743,7 @@ footer a {
   padding: 12px 35px 12px 15px;
   display: inline-block;
   width: 100%;
-  background-color: #4caf50;
+  background-color: #fcc623;
   color: #ffffff;
   position: relative;
   text-decoration: none;
