--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -45,7 +45,7 @@ a {
 }
 a:hover,
 a:focus {
-  color: #4caf50;
+  color: #fcc623;
 }
 img {
   max-width: 100%;
@@ -73,11 +73,11 @@ a:focus {
   margin-right: 5px;
 }
 ::selection {
-  background: #4caf50;
+  background: #fcc623;
   color: #fff;
 }
 ::-moz-selection {
-  background: #4caf50;
+  background: #fcc623;
   color: #fff;
 }
 .block-title {
@@ -112,7 +112,7 @@ h3.block-title {
   box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.15), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
 }
 .btn-common {
-  background: #4caf50;
+  background: #fcc623;
   position: relative;
 }
 .btn-common::before {
@@ -226,7 +226,7 @@ h3.block-title {
   color: #fff;
 }
 .breadcrumb-wrapper .current {
-  color: #4caf50;
+  color: #fcc623;
 }
 select.form-control {
   border: 0;
@@ -274,7 +274,7 @@ select.form-control:focus {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #4caf50;
+  background-color: #fcc623;
   -webkit-animation: sk-foldCubeAngle 2.4s infinite linear both;
   animation: sk-foldCubeAngle 2.4s infinite linear both;
   -webkit-transform-origin: 100% 100%;
