--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -48,7 +48,7 @@ a {
 }
 a:hover,
 a:focus {
-  color: #4caf50;
+  color: #fcc623;
 }
 img {
   max-width: 100%;
@@ -76,11 +76,11 @@ a:focus {
   margin-right: 5px;
 }
 ::selection {
-  background: #4caf50;
+  background: #fcc623;
   color: #fff;
 }
 ::-moz-selection {
-  background: #4caf50;
+  background: #fcc623;
   color: #fff;
 }
 .block-title {
@@ -115,7 +115,7 @@ h3.block-title {
   box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.15), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
 }
 .btn-common {
-  background: #4caf50;
+  background: #fcc623;
   position: relative;
 }
 .btn-common::before {
@@ -229,7 +229,7 @@ h3.block-title {
   color: #fff;
 }
 .breadcrumb-wrapper .current {
-  color: #4caf50;
+  color: #fcc623;
 }
 select.form-control {
   border: 0;
@@ -277,7 +277,7 @@ select.form-control:focus {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #4caf50;
+  background-color: #fcc623;
   -webkit-animation: sk-foldCubeAngle 2.4s infinite linear both;
   animation: sk-foldCubeAngle 2.4s infinite linear both;
   -webkit-transform-origin: 100% 100%;
@@ -362,7 +362,7 @@ header {
   -o-transition: all 0.4s ease-in-out;
 }
 .top-bar {
-  background: #101215;
+  background: #fcc623;
   border-bottom: 1px solid rgba(255, 255, 255, 0.06);
 }
 .top-bar .contact-details li {
@@ -399,7 +399,7 @@ header {
   margin-right: 5px;
 }
 .account-setting a:hover {
-  color: #4caf50;
+  color: #fcc623;
 }
 .top-bar-bottom {
   background: #F5F5F5;
@@ -520,7 +520,7 @@ ul.social-list li a i {
 .navbar-default .navbar-nav > li:hover > a,
 .navbar-default .navbar-nav > li > a.active {
   color: #fff;
-  background: #4caf50;
+  background: #fcc623;
   border-radius: 2px;
 }
 .navbar-default .navbar-nav > li > a i {
@@ -529,7 +529,7 @@ ul.social-list li a i {
 .navbar-default .navbar-nav .dropdown {
   position: absolute;
   left: 0;
-  border-top: 1px solid #4caf50;
+  border-top: 1px solid #fcc623;
   top: 100%;
   width: 234px;
   background-color: #fff;
@@ -579,12 +579,12 @@ ul.social-list li a i {
 .dropdown > li:hover > a,
 .sup-dropdown > li:hover > a {
   color: #fff;
-  background-color: #4caf50;
+  background-color: #fcc623;
 }
 .dropdown li a.active,
 .sub-dropdown li a.active {
   color: #fff;
-  background-color: #4caf50;
+  background-color: #fcc623;
 }
 .navbar-default .navbar-nav .sup-dropdown {
   position: absolute;
@@ -817,13 +817,13 @@ ul.social-list li a i {
   display: none;
 }
 .slicknav_btn {
-  border-color: #4caf50 !important;
+  border-color: #fcc623 !important;
 }
 .slicknav_btn:hover {
-  background: #4caf50;
+  background: #fcc623;
 }
 .slicknav_menu .slicknav_icon-bar {
-  background: #4caf50;
+  background: #fcc623;
 }
 @media screen and (max-width: 767px) {
   .js .mobile-menu {
@@ -1089,7 +1089,7 @@ button {
 }
 #carousel-area .item .carousel-caption .price-sl {
   font-size: 30px;
-  color: #4caf50;
+  color: #fcc623;
   line-height: 36px;
   -webkit-animation-name: fadeInUp;
   animation-name: fadeInUp;
@@ -1120,7 +1120,7 @@ button {
   font-size: 40px;
 }
 #carousel-area .carousel-control i:hover {
-  color: #4caf50;
+  color: #fcc623;
 }
 #carousel-area .left.carousel-control {
   left: 5%;
@@ -1257,7 +1257,7 @@ button {
 .dropdown-menu li a:hover,
 .dropdown-menu li a:focus,
 .dropdown-menu li a:active {
-  background-color: #4caf50;
+  background-color: #fcc623;
   color: #fff;
   border-radius: 0;
 }
@@ -1366,7 +1366,7 @@ select > opation:focus {
   top: 12px;
   left: 12px;
   z-index: 3;
-  background: #4caf50;
+  background: #fcc623;
   border-radius: 2px;
   padding: 2px 12px 2px;
 }
@@ -1433,7 +1433,7 @@ select > opation:focus {
 .actions li .add-fav {
   color: #fff;
   font-size: 18px;
-  background: #4caf50;
+  background: #fcc623;
   width: 32px;
   line-height: 28px;
   height: 32px;
@@ -1472,7 +1472,7 @@ select > opation:focus {
   text-transform: uppercase;
 }
 .item-body .property-title a:hover {
-  color: #4caf50;
+  color: #fcc623;
 }
 .item-body .adderess {
   color: #999;
@@ -1500,7 +1500,7 @@ select > opation:focus {
   color: #999;
 }
 .item-foot a:hover {
-  color: #4caf50;
+  color: #fcc623;
 }
 .item-foot p {
   color: #999;
@@ -1587,7 +1587,7 @@ select > opation:focus {
   padding: 2px;
 }
 .features-box .features-icon i {
-  color: #4caf50;
+  color: #fcc623;
   font-size: 30px;
 }
 .features-box .features-content {
@@ -1620,7 +1620,7 @@ select > opation:focus {
   margin: 0px 5px;
   color: #666;
   text-transform: uppercase;
-  border: 1px solid #4caf50;
+  border: 1px solid #fcc623;
   padding: 10px 15px;
   -webkit-transition: all 0.9s ease;
   -moz-transition: all 0.9s ease;
@@ -1630,7 +1630,7 @@ select > opation:focus {
 }
 .controls a:hover,
 .controls .active {
-  background: #4caf50;
+  background: #fcc623;
   color: #fff;
 }
 #portfolio-list .mix {
@@ -1709,8 +1709,8 @@ select > opation:focus {
   transition: all 0.4s ease;
 }
 .portfolio-item .icon i:hover {
-  color: #4caf50;
-  border-color: #4caf50;
+  color: #fcc623;
+  border-color: #fcc623;
 }
 .portfolio-item .icon .left {
   -webkit-transform: translateY(25px);
@@ -1793,14 +1793,14 @@ select > opation:focus {
 }
 .features .features-box .features-content h4 i {
   margin-right: 10px;
-  color: #4caf50;
+  color: #fcc623;
   font-size: 26px;
   vertical-align: middle;
 }
 .features .thum-ft {
   margin-top: 54px;
   box-shadow: 8px 8px 0px rgba(52, 152, 219, 0.7);
-  border: 6px solid #4caf50;
+  border: 6px solid #fcc623;
 }
 /* ==========================================================================
    Featured Listings Styles
@@ -1832,7 +1832,7 @@ select > opation:focus {
   width: 40px;
   height: 40px;
   display: block !important;
-  background: #4caf50 !important;
+  background: #fcc623 !important;
   text-align: center;
   display: inline-block;
   opacity: 1!important;
@@ -1956,7 +1956,7 @@ select > opation:focus {
   margin-right: 5px;
 }
 .agent-member .info .profile-link:hover {
-  color: #4caf50;
+  color: #fcc623;
 }
 .agent-member:hover .agent-thumbnail {
   background: #f1f1f1;
@@ -2053,7 +2053,7 @@ select > opation:focus {
   position: absolute;
   bottom: 0;
   left: 0;
-  background: #4caf50;
+  background: #fcc623;
   width: 100%;
   padding: 10px 15px;
 }
@@ -2100,7 +2100,7 @@ select > opation:focus {
   color: #888;
 }
 .localtion-list .cat-list li a:hover {
-  color: #4caf50;
+  color: #fcc623;
   margin-left: 5px;
 }
 /* ==========================================================================
@@ -2120,7 +2120,7 @@ select > opation:focus {
 .counting .icon i {
   font-size: 42px;
   margin-right: 20px;
-  color: #4caf50;
+  color: #fcc623;
 }
 .counting .desc h3 {
   font-size: 42px;
@@ -2134,7 +2134,7 @@ select > opation:focus {
   letter-spacing: 1px;
 }
 .counting:hover span {
-  background: #4caf50;
+  background: #fcc623;
   -webkit-transform: scale(1.1, 1.1);
   -moz-transform: scale(1.1, 1.1);
   -ms-transform: scale(1.1, 1.1);
@@ -2187,11 +2187,11 @@ footer a {
   -o-transition: all 0.2s ease-in-out;
 }
 .footer-nav ul li a:hover {
-  color: #4caf50;
+  color: #fcc623;
 }
 .footer-nav ul li a i {
   margin-right: 5px;
-  color: #4caf50;
+  color: #fcc623;
   font-size: 14px;
 }
 .address li {
@@ -2245,7 +2245,7 @@ footer a {
   color: #fff;
 }
 #copyright p a:hover {
-  color: #4caf50;
+  color: #fcc623;
 }
 .bottom-social-icons a {
   color: #fff;
@@ -2292,7 +2292,7 @@ footer a {
 .widget-title:before {
   content: "";
   position: absolute;
-  border-bottom: 3px solid #4caf50;
+  border-bottom: 3px solid #fcc623;
   width: 50px;
   bottom: -1px;
   left: 0px;
@@ -2301,7 +2301,7 @@ footer a {
   display: inline-block;
   margin-right: 15px;
   font-size: 16px;
-  color: #4caf50;
+  color: #fcc623;
 }
 .widget-title h4 {
   font-size: 16px;
@@ -2323,7 +2323,7 @@ footer a {
   border-bottom: 1px solid #eee;
 }
 .categories-list ul li a:hover {
-  color: #4caf50;
+  color: #fcc623;
 }
 .categories-list ul li a i {
   margin-right: 5px;
@@ -2355,7 +2355,7 @@ footer a {
   border-radius: 4px;
 }
 .product-filter .grid-list-count .active {
-  color: #4caf50;
+  color: #fcc623;
 }
 .product-filter .title-listing {
   margin: 0px;
@@ -2411,11 +2411,11 @@ footer a {
 .property-head .price-detail {
   font-size: 30px;
   line-height: 50px;
-  color: #4caf50;
+  color: #fcc623;
 }
 .property-head .web-refernce strong {
   font-size: 22px;
-  color: #4caf50;
+  color: #fcc623;
 }
 .property-head .icon {
   text-align: center;
@@ -2517,7 +2517,7 @@ footer a {
   color: #999;
 }
 .adds-wrapper .add-type {
-  color: #4caf50;
+  color: #fcc623;
   background: #eee;
   border: 1px solid #ddd;
   display: inline-block;
@@ -2590,7 +2590,7 @@ footer a {
 .nav-tabs > li > a {
   color: #2d2d2d;
   margin-right: 5px;
-  border: 1px solid #4caf50;
+  border: 1px solid #fcc623;
   padding: 10px 20px;
   border-radius: 2px;
 }
@@ -2598,9 +2598,9 @@ footer a {
 .nav-tabs > li.active > a:focus,
 .nav-tabs > li > a:hover,
 .nav-tabs > li.active > a:hover {
-  background: #4caf50;
+  background: #fcc623;
   border-radius: 2px;
-  border: 1px solid #4caf50;
+  border: 1px solid #fcc623;
   outline: none;
   color: #fff;
 }
@@ -2659,7 +2659,7 @@ footer a {
 .pagination > .active > span,
 .pagination > .active > span:focus,
 .pagination > .active > span:hover {
-  background-color: #4caf50 !important;
+  background-color: #fcc623 !important;
   border: none;
 }
 .pagination > li:first-child > a,
@@ -2674,8 +2674,8 @@ footer a {
 .pagination > li > a:hover,
 .pagination > li > span:focus,
 .pagination > li > span:hover {
-  background: #4caf50;
-  border-color: #4caf50;
+  background: #fcc623;
+  border-color: #fcc623;
   color: #fff;
 }
 /* ==========================================================================
@@ -2827,7 +2827,7 @@ footer a {
   font-size: 15px;
   border-radius: 2px;
   text-align: center;
-  background-color: #4caf50;
+  background-color: #fcc623;
   -webkit-transition: all 0.2s linear;
   -moz-transition: all 0.2s linear;
   -o-transition: all 0.2s linear;
@@ -2896,7 +2896,7 @@ footer a {
   padding: 12px 35px 12px 15px;
   display: inline-block;
   width: 100%;
-  background-color: #4caf50;
+  background-color: #fcc623;
   color: #ffffff;
   position: relative;
   text-decoration: none;
@@ -3298,7 +3298,7 @@ footer a {
 .widget-featured .widget-img .text span {
   font-size: 20px;
   font-weight: 700;
-  color: #4caf50;
+  color: #fcc623;
 }
 .widget-search input[type="search"] {
   position: relative;
@@ -3541,7 +3541,7 @@ blockquote p {
 .form-control:focus,
 textarea:focus {
   box-shadow: none;
-  border: 1px solid #4caf50;
+  border: 1px solid #fcc623;
   outline: none;
 }
 .has-error .form-control:focus {
@@ -3585,7 +3585,7 @@ textarea:focus {
   color: #999;
 }
 .page-login-form .form-links li a:hover {
-  color: #4caf50;
+  color: #fcc623;
 }
 .login-form input[type="checkbox"],
 .login-form input[type="radio"] {
@@ -3614,7 +3614,7 @@ textarea:focus {
   font-weight: 700;
 }
 .support-inner .support-info .info-title i {
-  color: #4caf50;
+  color: #fcc623;
   font-size: 30px;
   left: 25px;
   position: absolute;
